<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/exercise_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="some text for testing" />

        <EditText
            android:id="@+id/exercise_time"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            tools:text="some text for testing"
            android:hint="@string/exercise_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

            <Button
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:id="@+id/delete_exercise"
                android:text="@string/delete"/>

            <Button
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:id="@+id/save_exercise"
                android:text="@string/save"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>